[gd_scene load_steps=27 format=3 uid="uid://c0o78n2c083ls"]

[ext_resource type="Script" uid="uid://iqhc4lyanjwq" path="res://Scripts/Controller/Main.gd" id="1_ly5xe"]
[ext_resource type="PackedScene" uid="uid://b3rq02pw3aj8b" path="res://Scenes/DemoScenes/basic_wave.tscn" id="2_42qp0"]
[ext_resource type="Script" uid="uid://cpcojf2mlb0a4" path="res://Scripts/GameStateSystems/level_manager.gd" id="3_lwuus"]
[ext_resource type="Script" uid="uid://7h7c2yvx0t7r" path="res://Scripts/Controller/input_controller.gd" id="4_s7buc"]
[ext_resource type="Script" uid="uid://dkrm20h376m2x" path="res://Scripts/Controller/water_event_controller.gd" id="5_t1mef"]
[ext_resource type="PackedScene" uid="uid://2qs2bh3hopl5" path="res://Scenes/UI/level_ui.tscn" id="6_p6x6m"]
[ext_resource type="Script" uid="uid://btfb7d3vyclnk" path="res://Scripts/Controller/canvas_controller.gd" id="7_8x2sp"]
[ext_resource type="PackedScene" uid="uid://chj31s2snd6ma" path="res://Scenes/UI/pause_menu.tscn" id="8_1om1u"]
[ext_resource type="Script" uid="uid://c47w15kn1oxio" path="res://Scripts/Controller/camera_controller.gd" id="9_h8n6d"]
[ext_resource type="PackedScene" uid="uid://c64cjsv4teeu8" path="res://Scenes/Boat/Boat.tscn" id="10_djoau"]
[ext_resource type="Material" uid="uid://did5jrj8sc7wm" path="res://Resources/Shader/water_mat.tres" id="11_1jd1o"]
[ext_resource type="PackedScene" uid="uid://bbmfs03o1here" path="res://Scenes/SpecialEffectsAndParticleSystems/Tornado.tscn" id="12_h2vu8"]
[ext_resource type="PackedScene" uid="uid://ccuoj71q5kdch" path="res://Scenes/SmallPrefabs/barrel.tscn" id="13_er8sc"]
[ext_resource type="PackedScene" uid="uid://bbpcn3gm56ial" path="res://Scenes/SmallPrefabs/hammer.tscn" id="14_d6ga2"]
[ext_resource type="PackedScene" uid="uid://c6qf11375ilxy" path="res://Scenes/SmallPrefabs/ambrosia.tscn" id="15_t6yr2"]
[ext_resource type="PackedScene" uid="uid://bg6kjdframjpd" path="res://Scenes/SmallPrefabs/rock.tscn" id="16_jv37r"]
[ext_resource type="PackedScene" uid="uid://c183d6xesnglj" path="res://Scenes/AcheronOverworld/acheron_overworld.tscn" id="17_dd2pl"]
[ext_resource type="PackedScene" uid="uid://c0lvcrcrcyr7q" path="res://Scenes/SmallPrefabs/end_trigger.tscn" id="18_t1yb2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wipk"]
sky_top_color = Color(0, 0.458139, 0.787562, 1)
sky_horizon_color = Color(0.556568, 0.712281, 0.64783, 1)
ground_bottom_color = Color(0.894118, 0.894118, 0.764706, 1)
ground_horizon_color = Color(0.550963, 0.709882, 0.678499, 1)

[sub_resource type="Sky" id="Sky_sxhid"]
sky_material = SubResource("ProceduralSkyMaterial_0wipk")

[sub_resource type="Environment" id="Environment_3sdht"]
background_mode = 2
sky = SubResource("Sky_sxhid")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_rrces"]
size = Vector2(5000, 400)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_yieir"]
data = PackedVector3Array(2500, 0, 200, -2500, 0, 200, 2500, 0, -200, -2500, 0, 200, -2500, 0, -200, 2500, 0, -200)

[sub_resource type="Animation" id="Animation_6bsal"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(236.509, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3.05176e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1142.55, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_rrces"]
resource_name = "move_tornado"
length = 90.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(236.509, -0.25, 0, 0.25, 0, 236.509, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 90)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3.05176e-05, -0.25, 0, 0.25, 0, 3.05176e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 90)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1142.55, -0.25, 0, 0.25, 0, -2044.91, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 90)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bsal"]
_data = {
&"RESET": SubResource("Animation_6bsal"),
&"move_tornado": SubResource("Animation_rrces")
}

[node name="AcheronOverworld2" type="Node3D"]
script = ExtResource("1_ly5xe")
radial_wave_scene = ExtResource("2_42qp0")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("3_lwuus")
start_dialogue_name = "timeline"
end_dialogue_name = "EndeAcheron"

[node name="InputController" type="Node" parent="."]
script = ExtResource("4_s7buc")

[node name="WaterEventController" type="Node" parent="."]
script = ExtResource("5_t1mef")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Level_UI" parent="CanvasLayer" instance=ExtResource("6_p6x6m")]
z_index = -1
mouse_filter = 2

[node name="Canvas" type="Node2D" parent="CanvasLayer"]
script = ExtResource("7_8x2sp")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("8_1om1u")]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("9_h8n6d")
boat_path = NodePath("../Boat")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3sdht")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.0366437, -0.865444, 0.499664, 0, 0.5, 0.866025, -0.999328, -0.0317344, 0.0183219, 0, 115.428, 13.286)
shadow_enabled = true

[node name="Water_River" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1.09672, 0, 1, 0, 1, 0, -4.79394e-08, 223.349, -24.5242, -1186.47)
material_override = ExtResource("11_1jd1o")
mesh = SubResource("PlaneMesh_rrces")

[node name="StaticBody3D" type="StaticBody3D" parent="Water_River"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Water_River/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_yieir")

[node name="pepito_tornada" parent="." instance=ExtResource("12_h2vu8")]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 236.509, 3.05176e-05, 1142.55)

[node name="AnimationPlayer" type="AnimationPlayer" parent="pepito_tornada"]
libraries = {
&"": SubResource("AnimationLibrary_6bsal")
}
autoplay = "move_tornado"

[node name="Obstacles" type="Node3D" parent="."]

[node name="Barrels" type="Node3D" parent="Obstacles"]

[node name="Barrel" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 234.121, -24, 296.634)
flow_strength = 1.0
phase = 1.57

[node name="Barrel2" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 120.121, -24, -576.366)

[node name="Barrel3" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 180.121, -24, -632.366)

[node name="Barrel4" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 246.121, -24, -700.366)

[node name="Barrel5" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 276.937, -24, -1516.11)

[node name="Barrel7" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 109.914, -24, -2236.91)
flow_strength = 0.8

[node name="Barrel10" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 148.914, -24, -2282.91)

[node name="Barrel11" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 167.045, -24, -2343.4)
phase = 1.57

[node name="Barrel8" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 369.914, -24, -2236.91)
flow_strength = 0.8
phase = 3.14

[node name="Barrel9" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 329.914, -24, -2283.62)
phase = 3.14

[node name="Barrel12" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 307.288, -24, -2345.51)
phase = 1.57

[node name="Barrel13" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 239.31, -24, -2345.51)
phase = 1.57

[node name="Barrel6" parent="Obstacles/Barrels" instance=ExtResource("13_er8sc")]
transform = Transform3D(-0.0158644, 0, -0.999874, 0, 1, 0, 0.999874, 0, -0.0158644, 189.167, -24, -1569.26)
phase = 3.14

[node name="Hammers" type="Node3D" parent="Obstacles"]

[node name="Hammer" parent="Obstacles/Hammers" instance=ExtResource("14_d6ga2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 232.736, 0, -389.767)

[node name="Hammer2" parent="Obstacles/Hammers" instance=ExtResource("14_d6ga2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 194.736, 0, -1250.35)

[node name="Ambrosias" type="Node3D" parent="Obstacles"]

[node name="ambrosia" parent="Obstacles/Ambrosias" instance=ExtResource("15_t6yr2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 236.842, -7.63501, -2115.33)

[node name="Rocks" type="Node3D" parent="Obstacles"]

[node name="Rock" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 147.659, -13.1148, -38.0817)

[node name="Rock2" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 317.659, -13.1148, 34.3832)

[node name="Rock3" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 233.659, -13.1148, -195.045)

[node name="Rock4" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 233.659, -13.1148, -1409.55)

[node name="Rock5" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 144.654, -13.1148, -1726.04)

[node name="Rock6" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 342.654, -13.1148, -1753.93)

[node name="Rock7" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 342.654, -13.1148, -2531.16)

[node name="Rock8" parent="Obstacles/Rocks" instance=ExtResource("16_jv37r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 117.948, -13.1148, -2479.55)

[node name="AcheronOverworld" parent="." instance=ExtResource("17_dd2pl")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -4.57697, 584.986)

[node name="AcheronOverworld2" parent="." instance=ExtResource("17_dd2pl")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.335, -4.57697, -735.603)

[node name="AcheronOverworld3" parent="." instance=ExtResource("17_dd2pl")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 13.225, -4.57697, -2067.32)

[node name="AcheronOverworld4" parent="." instance=ExtResource("17_dd2pl")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 24.915, -4.57697, -3430.19)

[node name="Dock" parent="." instance=ExtResource("18_t1yb2")]
transform = Transform3D(-2.99204e-07, 0, 6.845, 0, 6.845, 0, -6.845, 0, -2.99204e-07, 125.993, -30.049, -3024.79)
input_ray_pickable = false

[node name="End_trigger" parent="." instance=ExtResource("18_t1yb2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 209.762, 0, -2882.92)

[node name="Boat" parent="." instance=ExtResource("10_djoau")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 251.938, -17.816, 720.368)

[editable path="CanvasLayer/Level_UI"]
